k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argodemo-web
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: argodemo-web
  template:
    metadata:
      labels:
        app: argodemo-web
    spec:
      containers:
        - name: argodemo-web
          image: ghcr.io/coregatekit/coregatekit/argo-demo-web:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
