k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argodemo-web
spec:
  type: ClusterIP
  selector:
    app: argodemo-web
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
