k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argodemo-web
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: "http"
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: argodemo-web.coregate.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argodemo-web
                port:
                  number: 3000
